--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
-{
+{ 
+  "name": "proyecto2",
+  "description": "Proyecto 2 de backend",
+  "main": "index.js",
+  "scripts": {
+    "start": "node src",
+    "dev": "nodemon src"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Carlosprimo/Proyecto2_backend"
+  },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^6.7.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
