--- a/package.json
+++ b/package.json
@@ -1,1 +1,34 @@
-{"name":"proyecto2","description":"Proyecto 2 de backend","main":"index.js","scripts":{"start":"node src","dev":"nodemon src"},"repository":{"type":"git","url":"https://github.com/Carlosprimo/Proyecto2_backend"},"dependencies":{"bcryptjs":"^2.4.3","cors":"^2.8.5","dotenv":"^16.0.3","express":"^4.18.2","jsonwebtoken":"^8.5.1","mongoose":"^6.7.2"},"devDependencies":{"nodemon":"^2.0.20"}}
+{
+    "name": "proyecto2",
+    "description": "Proyecto 2 de backend",
+    "main": "index.js",
+    "scripts": {
+        "start": "node src",
+        "dev": "nodemon src",
+        "test": "jest"
+    },
+    "jest": {
+        "transform": {
+            "^.+\\.[t|j]sx?$": "babel-jest"
+        }
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/Carlosprimo/Proyecto2_backend"
+    },
+    "dependencies": {
+        "@babel/preset-env": "^7.20.2",
+        "bcryptjs": "^2.4.3",
+        "cors": "^2.8.5",
+        "dotenv": "^16.0.3",
+        "express": "^4.18.2",
+        "jest": "^29.3.1",
+        "jsonwebtoken": "^8.5.1",
+        "mongoose": "^6.7.2",
+        "supertest": "^6.3.1"
+    },
+    "devDependencies": {
+        "babel-jest": "^29.3.1",
+        "nodemon": "^2.0.20"
+    }
+}
